все крім модалки

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
           </div>
           <ul class="site-nav list">
             <li class="site-nav-item">
-              <a href="./index.html" class="site-nav-link link current">Студія</a>
+              <a href="./index.html" class="site-nav-link link current"
+                >Студія</a
+              >
             </li>
             <li class="site-nav-item">
               <a href="./portfolio.html" class="site-nav-link link"
@@ -40,9 +42,7 @@
               >
             </li>
             <li class="site-nav-item">
-              <a href="./community.html" class="site-nav-link link"
-                >Контакти</a
-              >
+              <a href="./community.html" class="site-nav-link link">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -149,6 +149,7 @@
                 alt="програмування"
                 width="370"
               />
+              <h3 class="subtitle">Десктопні додатки</h3>
             </li>
             <li class="work-list-item">
               <img
@@ -156,6 +157,7 @@
                 alt="розробка мобільних додатків"
                 width="370"
               />
+              <h3 class="subtitle">Мобільні додатки</h3>
             </li>
             <li class="work-list-item">
               <img
@@ -163,6 +165,7 @@
                 alt="графічний дизайн"
                 width="370"
               />
+              <h3 class="subtitle">Дизайнерські рішення</h3>
             </li>
           </ul>
         </div>
