--- a/portfolio.html
+++ b/portfolio.html
@@ -96,13 +96,23 @@
 
           <ul class="projects list">
             <li class="portfolio-list">
-              <a href="#" class="portfolio link"
-                ><img
-                  src="./images/portfolio/1.jpg"
-                  alt="ноутбук з відкритою сторінкою веб-сайту"
-                  width="370"
-                  height="294"
-                />
+              <a href="#" class="portfolio link">
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/portfolio/1.jpg"
+                    alt="ноутбук з відкритою сторінкою веб-сайту"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-item">
                   <h2 class="project-title">Технокряк</h2>
                   <p class="text">Веб-сайт</p>
@@ -112,12 +122,22 @@
 
             <li class="portfolio-list">
               <a href="#" class="portfolio link"
-                ><img
-                  src="./images/portfolio/2.jpg"
-                  alt="гравці баскетбольної команди"
-                  width="370"
-                  height="294"
-                />
+                ><div class="overlay-wrapper">
+                  <img
+                    src="./images/portfolio/2.jpg"
+                    alt="гравці баскетбольної команди"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-item">
                   <h2 class="project-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -128,13 +148,23 @@
             </li>
 
             <li class="portfolio-list">
-              <a href="#" class="portfolio link"
-                ><img
-                  src="./images/portfolio/3.jpg"
-                  alt="логотип рибного ресторану"
-                  width="370"
-                  height="294"
-                />
+              <a href="#" class="portfolio link">
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/portfolio/3.jpg"
+                    alt="логотип рибного ресторану"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-item">
                   <h2 class="project-title">
                     Ресторан <span lang="en">Seafood</span>
@@ -145,13 +175,23 @@
             </li>
 
             <li class="portfolio-list">
-              <a href="#" class="portfolio link"
-                ><img
-                  src="images/portfolio/4.jpg"
-                  alt="навушники"
-                  width="370"
-                  height="294"
-                />
+              <a href="#" class="portfolio link">
+                <div class="overlay-wrapper">
+                  <img
+                    src="images/portfolio/4.jpg"
+                    alt="навушники"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-item">
                   <h2 class="project-title">
                     Проєкт <span lang="en">Prime</span>
@@ -162,13 +202,23 @@
             </li>
 
             <li class="portfolio-list">
-              <a href="#" class="portfolio link"
-                ><img
-                  src="./images/portfolio/5.jpg"
-                  alt="коробки"
-                  width="370"
-                  height="294"
-                />
+              <a href="#" class="portfolio link">
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/portfolio/5.jpg"
+                    alt="коробки"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-item">
                   <h2 class="project-title">
                     Проєкт <span lang="en">Boxes</span>
@@ -179,13 +229,23 @@
             </li>
 
             <li class="portfolio-list">
-              <a href="#" class="portfolio link"
-                ><img
-                  src="./images/portfolio/6.jpg"
-                  alt="монітор комп'ютера"
-                  width="370"
-                  height="294"
-                />
+              <a href="#" class="portfolio link">
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/portfolio/6.jpg"
+                    alt="монітор комп'ютера"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-item">
                   <h2 class="project-title">
                     <span lang="en">Inspiration has no Borders</span>
@@ -195,13 +255,23 @@
               </a>
             </li>
             <li class="portfolio-list">
-              <a href="#" class="portfolio link"
-                ><img
-                  src="./images/portfolio/7.jpg"
-                  alt="журнал"
-                  width="370"
-                  height="294"
-                />
+              <a href="#" class="portfolio link">
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/portfolio/7.jpg"
+                    alt="журнал"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-item">
                   <h2 class="project-title">
                     Видання <span lang="en">Limited Edition</span>
@@ -212,13 +282,23 @@
             </li>
 
             <li class="portfolio-list">
-              <a href="#" class="portfolio link"
-                ><img
-                  src="./images/portfolio/8.jpg"
-                  alt="етикетка для товару"
-                  width="370"
-                  height="294"
-                />
+              <a href="#" class="portfolio link">
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/portfolio/8.jpg"
+                    alt="етикетка для товару"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-item">
                   <h2 class="project-title">
                     Проєкт <span lang="en">LAB</span>
@@ -229,13 +309,23 @@
             </li>
 
             <li class="portfolio-list">
-              <a href="#" class="portfolio link"
-                ><img
-                  src="./images/portfolio/9.jpg"
-                  alt="руки людини, що друкують на комп'ютері"
-                  width="370"
-                  height="294"
-                />
+              <a href="#" class="portfolio link">
+                <div class="overlay-wrapper">
+                  <img
+                    src="./images/portfolio/9.jpg"
+                    alt="руки людини, що друкують на комп'ютері"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-item">
                   <h2 class="project-title">
                     <span lang="en">Growing Business</span>
