--- a/community.html
+++ b/community.html
@@ -102,7 +102,7 @@
           </address>
         </div>
         <div class="footer-list">
-          <h2 class="footer-title">приєднуйтесь</h2>
+          <p class="footer-title">приєднуйтесь</p>
           <ul class="footer-social-list list">
             <li class="footer-social-item">
               <a class="footer-social-link" href="#">
