--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <div class="hero-button">
-            <button type="button" class="button primary">
+            <button data-modal-open type="button" class="button primary">
               Замовити послугу
             </button>
           </div>
@@ -149,7 +149,7 @@
                 alt="програмування"
                 width="370"
               />
-              <h3 class="subtitle">Десктопні додатки</h3>
+              <p class="subtitle">Десктопні додатки</p>
             </li>
             <li class="work-list-item">
               <img
@@ -157,7 +157,7 @@
                 alt="розробка мобільних додатків"
                 width="370"
               />
-              <h3 class="subtitle">Мобільні додатки</h3>
+              <p class="subtitle">Мобільні додатки</p>
             </li>
             <li class="work-list-item">
               <img
@@ -165,7 +165,7 @@
                 alt="графічний дизайн"
                 width="370"
               />
-              <h3 class="subtitle">Дизайнерські рішення</h3>
+              <p class="subtitle">Дизайнерські рішення</p>
             </li>
           </ul>
         </div>
@@ -429,7 +429,7 @@
           </address>
         </div>
         <div class="footer-list">
-          <h2 class="footer-title">приєднуйтесь</h2>
+          <p class="footer-title">приєднуйтесь</p>
           <ul class="footer-social-list list">
             <li class="footer-social-item">
               <a class="footer-social-link" href="#">
@@ -463,5 +463,13 @@
         </div>
       </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <p></p>
+        <button data-modal-close>закрити</button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
