дз перед здачею

--- a/index.html
+++ b/index.html
@@ -466,8 +466,11 @@
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <p></p>
-        <button data-modal-close>закрити</button>
+        <button class="button-close" data-modal-close>
+          <svg class="button-icon" width="18px" height="18">
+            <use href="./images/symbol-defs (1).svg#close-black"></use>
+          </svg>
+        </button>
       </div>
     </div>
     <script src="./js/modal.js"></script>
