--- a/index.html
+++ b/index.html
@@ -188,28 +188,28 @@
                 <p class="team-list-text" lang="en">Product Designer</p>
                 <ul class="social-list list">
                   <li class="social-item">
-                    <a class="social-link" href="#">
+                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#">
+                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#">
+                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#">
+                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -229,28 +229,28 @@
                 <p class="team-list-text" lang="en">Frontend Developer</p>
                 <ul class="social-list list">
                   <li class="social-item">
-                    <a class="social-link" href="#">
+                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#">
+                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#">
+                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#">
+                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -270,28 +270,28 @@
                 <p class="team-list-text" lang="en">Marketing</p>
                 <ul class="social-list list">
                   <li class="social-item">
-                    <a class="social-link" href="#">
+                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#">
+                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#">
+                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#">
+                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -311,28 +311,28 @@
                 <p class="team-list-text" lang="en">UI Designer</p>
                 <ul class="social-list list">
                   <li class="social-item">
-                    <a class="social-link" href="#">
+                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener" target="_blank" rel="noreferrer noopener">
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#">
+                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener" target="_blank" rel="noreferrer noopener">
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#">
+                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener" target="_blank" rel="noreferrer noopener">
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#">
+                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener" target="_blank" rel="noreferrer noopener">
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -350,42 +350,42 @@
           <h2 class="section-title">Постійні клієнти</h2>
           <ul class="clients list">
             <li class="clients-list">
-              <a href="#" class="clients-item">
+              <a href="#" class="clients-item" target="_blank" rel="noreferrer noopener">
                 <svg width="106px" height="60px" class="clients-link">
                   <use href="./images/icons.svg#Logo"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list">
-              <a href="#" class="clients-item">
+              <a href="#" class="clients-item" target="_blank" rel="noreferrer noopener">
                 <svg width="106px" height="60px" class="clients-link">
                   <use href="./images/icons.svg#Logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list">
-              <a href="#" class="clients-item">
+              <a href="#" class="clients-item" target="_blank" rel="noreferrer noopener">
                 <svg width="106px" height="60px" class="clients-link">
                   <use href="./images/icons.svg#Logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list">
-              <a href="#" class="clients-item">
+              <a href="#" class="clients-item" target="_blank" rel="noreferrer noopener">
                 <svg width="106px" height="60px" class="clients-link">
                   <use href="./images/icons.svg#Logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list">
-              <a href="#" class="clients-item">
+              <a href="#" class="clients-item" target="_blank" rel="noreferrer noopener">
                 <svg width="106px" height="60px" class="clients-link">
                   <use href="./images/icons.svg#Logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list">
-              <a href="#" class="clients-item">
+              <a href="#" class="clients-item" target="_blank" rel="noreferrer noopener">
                 <svg width="106px" height="60px" class="clients-link">
                   <use href="./images/icons.svg#Logo-5"></use>
                 </svg>
@@ -432,28 +432,48 @@
           <p class="footer-title">приєднуйтесь</p>
           <ul class="footer-social-list list">
             <li class="footer-social-item">
-              <a class="footer-social-link" href="#">
+              <a
+                class="footer-social-link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <svg class="footer-social-icon" width="20px" height="20px">
                   <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="footer-social-link" href="#">
+              <a
+                class="footer-social-link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <svg class="footer-social-icon" width="20px" height="20px">
                   <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="footer-social-link" href="#">
+              <a
+                class="footer-social-link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <svg class="footer-social-icon" width="20px" height="20px">
                   <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="footer-social-link" href="#">
+              <a
+                class="footer-social-link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <svg class="footer-social-icon" width="20px" height="20px">
                   <use href="./images/icons.svg#linkedin"></use>
                 </svg>
