--- a/portfolio.html
+++ b/portfolio.html
@@ -375,28 +375,48 @@
           <p class="footer-title">приєднуйтесь</p>
           <ul class="footer-social-list list">
             <li class="footer-social-item">
-              <a class="footer-social-link" href="#">
+              <a
+                class="footer-social-link"
+                href="#"
+                target="_blank"
+                rel="noreferrer noopener"
+              >
                 <svg class="footer-social-icon" width="20px" height="20px">
                   <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="footer-social-link" href="#">
+              <a
+                class="footer-social-link"
+                href="#"
+                target="_blank"
+                rel="noreferrer noopener"
+              >
                 <svg class="footer-social-icon" width="20px" height="20px">
                   <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="footer-social-link" href="#">
+              <a
+                class="footer-social-link"
+                href="#"
+                target="_blank"
+                rel="noreferrer noopener"
+              >
                 <svg class="footer-social-icon" width="20px" height="20px">
                   <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
-              <a class="footer-social-link" href="#">
+              <a
+                class="footer-social-link"
+                href="#"
+                target="_blank"
+                rel="noreferrer noopener"
+              >
                 <svg class="footer-social-icon" width="20px" height="20px">
                   <use href="./images/icons.svg#linkedin"></use>
                 </svg>
