--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 alt="програмування"
                 width="370"
               />
-              <p class="subtitle">Десктопні додатки</p>
+              <h3 class="subtitle">Десктопні додатки</h3>
             </li>
             <li class="work-list-item">
               <img
@@ -157,7 +157,7 @@
                 alt="розробка мобільних додатків"
                 width="370"
               />
-              <p class="subtitle">Мобільні додатки</p>
+              <h3 class="subtitle">Мобільні додатки</h3>
             </li>
             <li class="work-list-item">
               <img
@@ -165,7 +165,7 @@
                 alt="графічний дизайн"
                 width="370"
               />
-              <p class="subtitle">Дизайнерські рішення</p>
+              <h3 class="subtitle">Дизайнерські рішення</h3>
             </li>
           </ul>
         </div>
@@ -188,28 +188,48 @@
                 <p class="team-list-text" lang="en">Product Designer</p>
                 <ul class="social-list list">
                   <li class="social-item">
-                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
+                    <a
+                      class="social-link"
+                      href="#"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
+                    <a
+                      class="social-link"
+                      href="#"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
+                    <a
+                      class="social-link"
+                      href="#"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
+                    <a
+                      class="social-link"
+                      href="#"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -229,28 +249,48 @@
                 <p class="team-list-text" lang="en">Frontend Developer</p>
                 <ul class="social-list list">
                   <li class="social-item">
-                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
+                    <a
+                      class="social-link"
+                      href="#"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
+                    <a
+                      class="social-link"
+                      href="#"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
+                    <a
+                      class="social-link"
+                      href="#"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
+                    <a
+                      class="social-link"
+                      href="#"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -270,28 +310,48 @@
                 <p class="team-list-text" lang="en">Marketing</p>
                 <ul class="social-list list">
                   <li class="social-item">
-                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
+                    <a
+                      class="social-link"
+                      href="#"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
+                    <a
+                      class="social-link"
+                      href="#"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
+                    <a
+                      class="social-link"
+                      href="#"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener">
+                    <a
+                      class="social-link"
+                      href="#"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -311,28 +371,56 @@
                 <p class="team-list-text" lang="en">UI Designer</p>
                 <ul class="social-list list">
                   <li class="social-item">
-                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener" target="_blank" rel="noreferrer noopener">
+                    <a
+                      class="social-link"
+                      href="#"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener" target="_blank" rel="noreferrer noopener">
+                    <a
+                      class="social-link"
+                      href="#"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener" target="_blank" rel="noreferrer noopener">
+                    <a
+                      class="social-link"
+                      href="#"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="#" target="_blank" rel="noreferrer noopener" target="_blank" rel="noreferrer noopener">
+                    <a
+                      class="social-link"
+                      href="#"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                    >
                       <svg class="social-icon" width="20px" height="20px">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -350,42 +438,72 @@
           <h2 class="section-title">Постійні клієнти</h2>
           <ul class="clients list">
             <li class="clients-list">
-              <a href="#" class="clients-item" target="_blank" rel="noreferrer noopener">
+              <a
+                href="#"
+                class="clients-item"
+                target="_blank"
+                rel="noreferrer noopener"
+              >
                 <svg width="106px" height="60px" class="clients-link">
                   <use href="./images/icons.svg#Logo"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list">
-              <a href="#" class="clients-item" target="_blank" rel="noreferrer noopener">
+              <a
+                href="#"
+                class="clients-item"
+                target="_blank"
+                rel="noreferrer noopener"
+              >
                 <svg width="106px" height="60px" class="clients-link">
                   <use href="./images/icons.svg#Logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list">
-              <a href="#" class="clients-item" target="_blank" rel="noreferrer noopener">
+              <a
+                href="#"
+                class="clients-item"
+                target="_blank"
+                rel="noreferrer noopener"
+              >
                 <svg width="106px" height="60px" class="clients-link">
                   <use href="./images/icons.svg#Logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list">
-              <a href="#" class="clients-item" target="_blank" rel="noreferrer noopener">
+              <a
+                href="#"
+                class="clients-item"
+                target="_blank"
+                rel="noreferrer noopener"
+              >
                 <svg width="106px" height="60px" class="clients-link">
                   <use href="./images/icons.svg#Logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list">
-              <a href="#" class="clients-item" target="_blank" rel="noreferrer noopener">
+              <a
+                href="#"
+                class="clients-item"
+                target="_blank"
+                rel="noreferrer noopener"
+              >
                 <svg width="106px" height="60px" class="clients-link">
                   <use href="./images/icons.svg#Logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list">
-              <a href="#" class="clients-item" target="_blank" rel="noreferrer noopener">
+              <a
+                href="#"
+                class="clients-item"
+                target="_blank"
+                rel="noreferrer noopener"
+              >
                 <svg width="106px" height="60px" class="clients-link">
                   <use href="./images/icons.svg#Logo-5"></use>
                 </svg>
@@ -488,7 +606,7 @@
       <div class="modal">
         <button class="button-close" data-modal-close>
           <svg class="button-icon" width="18px" height="18">
-            <use href="./images/symbol-defs (1).svg#close-black"></use>
+            <use href="./images/icons.svg#close-black"></use>
           </svg>
         </button>
       </div>
